tests/algorithms/transpiler/FS/graphs/tarjans_scc.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/tarjans_scc.fs(87,33): warning FS0046: The identifier 'component' is reserved for future use by F#

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/tarjans_scc.fs(91,21): warning FS0046: The identifier 'component' is reserved for future use by F#

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/tarjans_scc.fs(91,47): warning FS0046: The identifier 'component' is reserved for future use by F#

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/tarjans_scc.fs(96,25): warning FS0046: The identifier 'component' is reserved for future use by F#

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/tarjans_scc.fs(96,51): warning FS0046: The identifier 'component' is reserved for future use by F#

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/tarjans_scc.fs(97,61): warning FS0046: The identifier 'component' is reserved for future use by F#

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/tarjans_scc.fs(106,17): error FS0001: This expression was expected to have type
    unit    
but here has type
    int    
